Using HV SNAPSHOT to run TCK

--- a/setup-examples/ant/build.properties
+++ b/setup-examples/ant/build.properties
@@ -1,6 +1,3 @@
-# location of container to run tests in
-container.home=/opt/java/glassfish4
-
 # fully qualified class name of the Bean Validation provider under test
 validation.provider=org.hibernate.validator.HibernateValidator
 
@@ -10,5 +7,5 @@ tck.suite.file=beanvalidation-tck-tests-suite.xml
 # define versions of used dependencies
 version.arquillian=1.0.2.Final
 version.testng=6.8
-version.hv=5.0.0.Final
+version.hv=5.1.0-SNAPSHOT
 version.tck=1.1.0.Final
